# SNAP

./: .gitignore
qasnap/large/: SNAP.large.o3264417  large-2048nodes.input  run-large.sh
qasnap/small/: SNAP.small-src_opt0-16x16x16.o3269039  run-small.sh  small-4nodes.input  small-4nodes.output
src/: Makefile  Makefile.am  analyze.f90  configure.ac  data.f90  dealloc.f90  dim1_sweep.f90  dim3_sweep.f90  expxs.f90  geom.f90  global.f90  inner.f90  input.f90  outer.f90  output.f90  plib.F90  plib.f90  setup.f90  snap_main.f90  solvar.f90  sweep.f90  syscalls-kitten-tcasm-enclave.c  syscalls-kitten-tcasm-local.c  syscalls-kitten-xemem-enclave.c  syscalls-linux-null-local.c  syscalls-linux-xpmem-local.c  syscalls.c  time.F90  time.f90  translv.f90  utils.f90
