AUTOMAKE_OPTIONS = foreign
snap_kitten_tcasm_LDFLAGS =  -static -Wl,--whole-archive,--no-whole-archive -fopenmp -fno-backtrace
snap_kitten_tcasm_SOURCES = control.f90 data.f90 dealloc.f90 dim1_sweep.f90 dim3_sweep.f90 expxs.f90 geom.f90 global.f90 inner.f90 input.f90 mms.f90 octsweep.f90 outer.f90 output.f90 plib.f90 setup.f90 snap_main.f90 sn.f90 solvar.f90 sweep.f90 time.f90 translv.f90 utils.f90 version.f90 analytics.c gfortran_iargc.c mpidummy.c syscalls-kitten-tcasm-enclave.c
bin_PROGRAMS = snap_kitten_tcasm

